Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27863

Windows, regression: The second click of a doubleclick doesn't start autocapture

XMLWordPrintable

    • 5b52cb5b85e90d511a339c2775d2006493a82371

      The second click of a doubleclick doesn't start autocapture. This is a regression from Qt4.

      Steps to repro (with sample application from QTBUG-27639):
      1) Press left mouse button down on "Disabled" button.
      2) Move mouse over to the other window -> Observe no mouse events (this is correct)
      3) Release mouse
      4) Doubleclick on the "Disabled" button, with keeping the mouse pressed down after the second click.
      5) Move mouse over to the other window -> Observe enter and leave events (this is wrong, there should be no events).

      The root cause is almost certainly that WM_*BUTTONDBLCLK events are not checked for when starting autograb.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes